--- a/aplicacion/PagoAgilFrba/PagoAgilFrba.csproj
+++ b/aplicacion/PagoAgilFrba/PagoAgilFrba.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Configuracion\Configuracion.cs" />
     <Compile Include="DB\DB.cs" />
+    <Compile Include="DB\Respuesta.cs" />
     <Compile Include="Dominio\Cliente.cs" />
     <Compile Include="Dominio\Empresa.cs" />
     <Compile Include="Dominio\Factura.cs" />
